--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mediastudy.online",
   "version": "1.0.0",
-  "description": "",
+  "description": "Examples for DMS 321, spring 2023",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +12,13 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "path": "^0.12.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davepape/DMS321_2023.git"
+  },
+  "bugs": {
+    "url": "https://github.com/davepape/DMS321_2023/issues"
+  },
+  "homepage": "https://github.com/davepape/DMS321_2023#readme"
 }
