--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongodb": "4.15",
     "path": "^0.12.7"
   },
   "repository": {
